# c-partner-api-client

./: .gitignore  CMakeLists.txt  README.md  base64.c  base64.h  cJSON.c  cJSON.h  netki.c  netki.h  sha2.c  sha2.h  wnresolver.c  wnresolver.h
examples/: curlHttpCallbackImpl.c  curlHttpCallbackImpl.h  partner.c  wnresolver.c
